@@ -68,8 +68,14 @@ public class ServletUtil {
         // Get encoded user and password, comes after "BASIC "
         String userpassEncoded = auth.substring(6);
         // Decode it, using any base 64 decoder
-        sun.misc.BASE64Decoder dec = new sun.misc.BASE64Decoder();
-        String userpassDecoded = new String(dec.decodeBuffer(userpassEncoded));
+              
+        /**
+         * Edited sun.misc.Base64Decoder to org.apache.commons.codec.binary.Base64.decodeBase64
+         */
+        byte[] bytes = userpassEncoded.getBytes();//"UTF-8");
+		byte[] b = org.apache.commons.codec.binary.Base64.decodeBase64(bytes);
+		String userpassDecoded = new String(b);
+        
         String[] userpass = userpassDecoded.split(":");
         if (userpass.length != 2) {
         	return false;
@@ -103,4 +109,5 @@ public class ServletUtil {
 		
 		pw.write("</" + tagName + ">");
 	}
+	
 }
